--- a/charts/version-checker/values.yaml
+++ b/charts/version-checker/values.yaml
@@ -5,17 +5,23 @@
 replicaCount: 1
 
 image:
+  # -- Repository of the container image
   repository: nginx
+  # -- Set the Image Pull Policy
   pullPolicy: Always
+  # -- Override the chart version. Defaults to `appVersion` of the helm chart.
   tag: ""
 
+# Configure version-checkers behaviour
 versionChecker:
   allowedNamespaces: []
+  configPath: ""
 
 
-# This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+# -- This is for the secrets for pulling an image from a private repository
 imagePullSecrets: []
 # This is to override the chart name.
+# -- Override the Chart Name
 nameOverride: ""
 fullnameOverride: ""
 
@@ -30,15 +36,16 @@ serviceAccount:
   name: ""
 
 # This is for setting Kubernetes Annotations to a Pod.
-# For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
+# -- Additional Annotations to apply to Service and Deployment/Pod Objects
 podAnnotations: {}
 # This is for setting Kubernetes Labels to a Pod.
-# For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
+# -- Additional Labels to apply to Service and Deployment/Pod Objects
 podLabels: {}
-
+# -- Set pod-level security context
 podSecurityContext: {}
-  # fsGroup: 2000
+  # fsGroup: 1001
 
+# -- Set container-level security context
 securityContext: {}
   # capabilities:
   #   drop:
@@ -47,15 +54,16 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
-# This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
+# Configure version-checkers Service
 service:
   # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
   type: ClusterIP
-  # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
+  # -- Port to expose within the service
   port: 80
+  # -- Additional annotations to add to the service
+  annotations: {}
 
 secrets:
-  # -- Provide an existing Secret within the cluster to use for authentication and configuration of version-checker
   existingSecret: ""
   auth:
     name: ""
@@ -64,7 +72,7 @@ secrets:
   config:
     nameConfig: ""
 
-
+# -- Setup version-checkers resource requests/limits
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
@@ -77,17 +85,23 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
-# This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+# Configure the healthcheck probe for version-checker
 livenessProbe:
   httpGet:
+    # -- Path to use for the livenessProbe
     path: /
+    # -- Port to use for the livenessProbe
     port: http
+# Configure the readiness probe for version-checker
 readinessProbe:
   httpGet:
+    # -- Path to use for the readinessProbe
     path: /
+    # -- Port to use for the readinessProbe
     port: http
 
 # Additional volumes on the output Deployment definition.
+# -- Allow for extra Volumes to be associated to the pod
 volumes: []
 # - name: foo
 #   secret:
@@ -95,15 +109,19 @@ volumes: []
 #     optional: false
 
 # Additional volumeMounts on the output Deployment definition.
+# -- Allow for extra Volume Mounts to version-checkers container
 volumeMounts: []
 # - name: foo
 #   mountPath: "/etc/foo"
 #   readOnly: true
 
+# -- Configure nodeSelector
 nodeSelector: {}
 
+# -- Configure tolerations
 tolerations: []
 
+# -- Set affinity
 affinity: {}
 
 # Configure a Prometheus-Operator ServiceMonitor object
